# stock-data-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  main.py  pyproject.toml  test_main.py
schema/: stocks_raw.py
src/: daily_stats.py  dashboard.html  database.py  fetcher.py  flagged_data.py  main.py  processor.py  quality_data.py  schemas.py  stock_analysis.py
tests/: test_main.py
