[project]
name = "stock-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests-html>=0.10.0",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "yahoo-fin>=0.8.9.1",
    "yfinance>=1.2.0",
]
